[package]
name = "cargo-dbcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
anyhow = "1.0.93"
clap = { version = "4.5.4", features = ["derive"] }
clap-cargo = "0.14.1"
