[package]
name = "cargo-dbcheck"
version = "0.1.2"
edition = "2021"
description = "A CLI tool for tracking the progress in the db-academy.io courses"
license = "MIT"
keywords = ["cli", "dbcheck", "db-academy-io", "database-development"]
categories = ["database-implementations", "command-line-utilities", "development-tools::cargo-plugins",]
repository = "https://github.com/db-academy-io/cargo-dbcheck"

[dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
anyhow = "1.0.93"
clap = { version = "4.5.4", features = ["derive"] }
clap-cargo = "0.14.1"
git2 = "0.20.0"

[dev-dependencies]
pre-commit = "0.5.2"

[package.metadata.precommit]
fmt = "cargo fmt -- --write-mode diff 2>&1"
test = "cargo test 2>&1"
