[package]
name = "cargo-dbcheck"
version = "0.1.5"
edition = "2021"
description = "A CLI tool for tracking the progress in the db-academy.io courses"
license = "MIT"
keywords = ["cli", "dbcheck", "db-academy-io", "database-development"]
categories = ["database-implementations", "command-line-utilities", "development-tools::cargo-plugins",]
repository = "https://github.com/db-academy-io/cargo-dbcheck"

[dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native", "sync-secret-service"] }
clap = { version = "4.5.4", features = ["derive"] }
clap-cargo = "0.15.2"
git2 = "0.20.0"
serde = "1.0.217"
serde_json = "1.0.135"
serde_derive = "1.0.217"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }

[dev-dependencies]
pre-commit = "0.5.2"

[package.metadata.precommit]
fmt = "cargo fmt -- --write-mode diff 2>&1"
test = "cargo test 2>&1"
